# runners-api

./: .coverage  .env  .gitignore  Dockerfile  alembic.ini  database.py  docker-compose.yml  env  main.py  pyproject.toml  requirements.txt  test.db
.github/workflows/: ci.yml
alembic/versions/: 1d58e7a1b913_adding_registration_types_data.py  1f5b9c9bb79f_adding_registration_event_table.py  1fddf79b2d48_adding_events.py  276e098df8ca_added_events_category_test_tables.py  3d2ecb75b632_added_table_users.py  7c185caf23e7_added_recovery_password_columns.py  828bb246e9ef_added_is_admin_field_to_user.py  d8e2666ce98e_adding_new_user_columns.py  f790cf39b21c_adding_new_event_tables.py
app/: database.py  settings.py
app/constants/: registration_event.py
controllers/: registration_type.py  user.py
htmlcov/: __init___py.html  controllers___init___py.html  controllers_base_py.html  controllers_user_py.html  conventers___init___py.html  database_py.html  index.html  main_py.html  managers___init___py.html  managers_base_py.html  managers_user_py.html  models___init___py.html  models_models_py.html  models_schemas_py.html  routers___init___py.html  routers_auth_py.html  routers_user_py.html  status.json  tests___init___py.html  tests_test_users_py.html  utils___init___py.html  utils_encryption_helper_py.html
managers/: base.py  registration_type.py  user.py
models/: models.py  schemas.py
routers/: auth.py  registration_type.py  user.py
tests/: .coverage  test.db  test_users.py
translations/: errors.es.yml
utils/: encryption_helper.py  jwt_helper.py
(+25 files in other folders)
