[tool.poetry]
name = "runners-api"
version = "1.0.0"
description = "API for runners associations competions"
authors = ["Carlos Rincón, Maye García"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aioredis = "1.3.1"
aiosmtplib = "1.1.4"
alembic = "1.5.3"
async-timeout = "3.0.1"
bcrypt = "3.2.0"
blinker = "1.4"
certifi = "2020.12.5"
cffi = "1.14.5"
chardet = "4.0.0"
click = "7.1.2"
coverage = "5.4"
dnspython = "2.1.0"
email-validator = "1.1.2"
fakeredis = "1.4.5"
fastapi = "0.63.0"
fastapi-mail = "0.3.5.0"
h11 = "0.12.0"
hiredis = "1.1.0"
http-status-code = "0.0.8"
httpcore = "0.12.3"
httpx = "0.17.0"
idna = "2.10"
Jinja2 = "2.11.3"
Mako = "1.1.4"
MarkupSafe = "1.1.1"
passlib = "1.7.4"
psycopg2-binary = "2.8.6"
pycparser = "2.20"
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
PyJWT = "2.0.1"
python-dateutil = "2.8.1"
python-editor = "1.0.4"
python-i18n = "0.3.9"
python-multipart = "0.0.5"
PyYAML = "5.4.1"
redis = "3.5.3"
requests = "2.25.1"
rfc3986 = "1.4.0"
six = "1.15.0"
sniffio = "1.2.0"
sortedcontainers = "2.3.0"
SQLAlchemy = "1.3.22"
sqlparse = "0.4.1"
sqltap = "0.3.11"
starlette = "0.13.6"
urllib3 = "1.26.3"
uvicorn = "0.13.3"
Werkzeug = "1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
migrate = "alembic upgrade head"
